fix alignment top image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1227,7 +1227,7 @@ a.newer-posts:hover {
 }
 
 .page-cover-image figure {
-  position: relative;
+  /*position: relative;*/
   margin: 0;
 }
 
@@ -1244,8 +1244,9 @@ a.newer-posts:hover {
 }
 
 .page-cover-image .page-image {
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  transform: translateY(-20%);
+  -webkit-transform: translateY(-20%);
 }
 
 .page-footer {
